# libNeuralNet

./: CMakeLists.txt  clean.bat  readme.txt
OpenNNTest/: AppDelegate.swift  Info.plist  ViewController.swift
OpenNNTest.xcodeproj/: project.pbxproj
OpenNNTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenNNTest/Base.lproj/: Main.storyboard
OpenNNTest/OpenNNTest.xcdatamodeld/: .xccurrentversion
OpenNNTestTests/: Info.plist  OpenNNTestTests.swift
docs/manual/: manual.tcp  manual.tex
docs/reference/: doxyfile
examples/aircraft_landing/: aircraft_landing.cpp  aircraft_landing.h  aircraft_landing_application.cpp  aircraft_landing_solution_error.cpp  aircraft_landing_solution_error.h
examples/airfoil_self_noise/: airfoil_self_noise_application.cpp
examples/brachistochrone_problem/: brachistochrone_problem_application.cpp  descent_time.cpp  descent_time.h
examples/car_problem/: car.cpp  car.h  car_problem_application.cpp
examples/car_problem_neurocomputing/: car_neurocomputing.cpp  car_neurocomputing.h  car_problem_neurocomputing_application.cpp
examples/catenary_problem/: catenary_problem_application.cpp  potential_energy.cpp  potential_energy.h
examples/de_jong_function/: de_jong_function.cpp  de_jong_function.h  de_jong_function_application.cpp
examples/easom_function/: easom_function.cpp  easom_function.h  easom_function_application.cpp
examples/fed_batch_fermenter/: fed_batch_fermenter.cpp  fed_batch_fermenter.h  (+1 more)
source/: opennn.h
tests/: suite_tests_application.cpp  unit_testing.cpp  unit_testing.h
(+523 files in other folders)
